// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Components/Link Colored Links 1`] = `
Object {
  "_$litType$": 1,
  "strings": Array [
    "
      <div class=\\"d-flex\\">
            <a href=\\"#\\" class=\\"link-primary me-3\\">Primary link</a>
            <a href=\\"#\\" class=\\"link-secondary me-3\\">Secondary link</a>
            <a href=\\"#\\" class=\\"link-success me-3\\">Success link</a>
            <a href=\\"#\\" class=\\"link-danger me-3\\">Danger link</a>
            <a href=\\"#\\" class=\\"link-warning me-3\\">Warning link</a>
            <a href=\\"#\\" class=\\"link-info me-3\\">Info link</a>
            <a href=\\"#\\" class=\\"link-dark me-3\\">Dark link</a>
      </div>
   ",
  ],
  "values": Array [],
}
`;

exports[`Storyshots Components/Link Inline 1`] = `
Object {
  "_$litType$": 1,
  "strings": Array [
    "",
    "",
  ],
  "values": Array [
    Object {
      "_$litType$": 1,
      "strings": Array [
        "<a href=",
        " class=",
        " target=",
        ">",
        "</a>",
      ],
      "values": Array [
        "http://www.cardinalhealth.com",
        "inline ",
        "_self",
        "Link action",
      ],
    },
  ],
}
`;

exports[`Storyshots Components/Link Standalone 1`] = `
Object {
  "_$litType$": 1,
  "strings": Array [
    "",
    "",
  ],
  "values": Array [
    Object {
      "_$litType$": 1,
      "strings": Array [
        "<a href=",
        " target=",
        ">",
        "</a>",
      ],
      "values": Array [
        "http://www.cardinalhealth.com",
        "_self",
        "Link action",
      ],
    },
  ],
}
`;

exports[`Storyshots Components/Link Standalone With Icon 1`] = `
Object {
  "_$litType$": 1,
  "strings": Array [
    "",
    "",
  ],
  "values": Array [
    Object {
      "_$litType$": 1,
      "strings": Array [
        "
         <a href=",
        " target=",
        " class=\\"d-inline-flex align-items-center text-decoration-none\\">
            <span class=\\"text-decoration-underline\\">",
        "</span>
            <span class=\\"material-icons ms-1 mt-1 md-16\\">open_in_new</span>
         </a>",
      ],
      "values": Array [
        "http://www.cardinalhealth.com",
        "_self",
        "Link action",
      ],
    },
  ],
}
`;
